--- a/RecGlobe/app/src/main/AndroidManifest.xml
+++ b/RecGlobe/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CoachLoginActivity"></activity>
+        <activity android:name=".AthleteSetProfileActivity"></activity>
+        <activity android:name=".CoachSetProfileActivity" />
+        <activity android:name=".AtheleteRegistrationActivity" />
+        <activity android:name=".AtheleteLoginActivity" />
+        <activity android:name=".CoachLoginActivity" />
         <activity android:name=".CoachRegistrationActivity" />
         <activity android:name=".login_option_activity">
             <intent-filter>
