--- a/RecGlobe/app/build.gradle
+++ b/RecGlobe/app/build.gradle
@@ -35,6 +35,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.8'
     implementation 'com.google.firebase:firebase-database:16.1.0'
     implementation 'com.google.firebase:firebase-auth:16.2.1'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
+
+
 }
 
 apply plugin: 'com.google.gms.google-services'
