--- a/RecGlobe/app/src/main/AndroidManifest.xml
+++ b/RecGlobe/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         <activity android:name=".AtheleteLoginActivity" />
         <activity android:name=".CoachLoginActivity" />
         <activity android:name=".CoachRegistrationActivity" />
+        <activity android:name=".AthleteProfileActivity" />
         <activity android:name=".login_option_activity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
