--- a/RecGlobe/app/build.gradle
+++ b/RecGlobe/app/build.gradle
@@ -37,8 +37,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:16.2.1'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'de.hdodenhof:circleimageview:3.0.0'
-
-
+    implementation  'com.android.support:cardview-v7:28.0.0'
+    implementation  'com.android.support:appcompat-v7:28.0.0'
+    implementation  'com.android.support:design:28.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
