--- a/RecGlobe/app/build.gradle
+++ b/RecGlobe/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation  'com.android.support:cardview-v7:28.0.0'
     implementation  'com.android.support:appcompat-v7:28.0.0'
     implementation  'com.android.support:design:28.0.0'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
 
 }
 
