--- a/RecGlobe/app/src/main/AndroidManifest.xml
+++ b/RecGlobe/app/src/main/AndroidManifest.xml
@@ -12,24 +12,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CoachProfileActivity"></activity>
-        <activity android:name=".Chat.ChatActivity"></activity>
-        <activity android:name=".SecondMainActivity"></activity>
-        <activity android:name=".AthleteSetProfileActivity" />
-        <activity android:name=".CoachSetProfileActivity" />
-        <activity android:name=".AtheleteRegistrationActivity" />
-        <activity android:name=".AtheleteLoginActivity" />
-        <activity android:name=".CoachLoginActivity" />
-        <activity android:name=".CoachRegistrationActivity" />
-        <activity android:name=".AthleteProfileActivity" />
-        <activity android:name=".login_option_activity">
+        <activity android:name=".Match.MatchForCoach"></activity>
+        <activity android:name=".LoginAndProfile.CoachProfileActivity" />
+        <activity android:name=".Chat.ChatActivity" />
+        <activity android:name=".Swipe.SecondMainActivity" />
+        <activity android:name=".Registration.AthleteSetProfileActivity" />
+        <activity android:name=".Registration.CoachSetProfileActivity" />
+        <activity android:name=".Registration.AtheleteRegistrationActivity" />
+        <activity android:name=".LoginAndProfile.AtheleteLoginActivity" />
+        <activity android:name=".LoginAndProfile.CoachLoginActivity" />
+        <activity android:name=".Registration.CoachRegistrationActivity" />
+        <activity android:name=".LoginAndProfile.AthleteProfileActivity" />
+        <activity android:name=".LoginAndProfile.login_option_activity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
+        <activity android:name=".Swipe.MainActivity" />
     </application>
 
 </manifest>
